Add issue #231 New option to choose download format for .pnj links
- Tumblr internally converts some PNGs to JPGs and offers the image as a .pnj link. When requesting such a link, normally the JPG version is returned for saving bandwidth and the app stored them with the extension ".pnj.jpg". Some users want the app to download the PNGs.
- A new general blog setting allows the user to choose the download format for .pnj links.

--- a/src/TumblThree/TumblThree.Domain/TumblThree.Domain.csproj
+++ b/src/TumblThree/TumblThree.Domain/TumblThree.Domain.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Models\Files\TumblrBlogFiles.cs" />
     <Compile Include="Models\Files\Files.cs" />
     <Compile Include="Models\Files\TwitterBlogFiles.cs" />
+    <Compile Include="Models\PnjDownloadType.cs" />
     <Compile Include="Models\TumblrBlogCrawlerTypes.cs" />
     <Compile Include="Models\MetadataType.cs" />
     <Compile Include="Models\GfycatType.cs" />
