--- a/src/TumblThree/TumblThree.Presentation/TumblThree.Presentation.csproj
+++ b/src/TumblThree/TumblThree.Presentation/TumblThree.Presentation.csproj
@@ -262,6 +262,7 @@
     <Compile Include="Controls\ToolTipBehavior.cs" />
     <Compile Include="Converters\BrushResourceConverter.cs" />
     <Compile Include="Converters\CollectionMultiConverter.cs" />
+    <Compile Include="Converters\CollectionOptionEnabledConverter.cs" />
     <Compile Include="Converters\TumblrBlogCrawlerTypesConverter.cs" />
     <Compile Include="Converters\BlogtypeToDisplayValueConverter.cs" />
     <Compile Include="Converters\ConverterHelper.cs" />
