Add Show blog description when hoovering blog name in details pane

--- a/src/TumblThree/TumblThree.Presentation/TumblThree.Presentation.csproj
+++ b/src/TumblThree/TumblThree.Presentation/TumblThree.Presentation.csproj
@@ -263,6 +263,7 @@
     <Compile Include="Converters\BrushResourceConverter.cs" />
     <Compile Include="Converters\CollectionMultiConverter.cs" />
     <Compile Include="Converters\CollectionOptionEnabledConverter.cs" />
+    <Compile Include="Converters\NullToBoolConverter.cs" />
     <Compile Include="Converters\TumblrBlogCrawlerTypesConverter.cs" />
     <Compile Include="Converters\BlogtypeToDisplayValueConverter.cs" />
     <Compile Include="Converters\ConverterHelper.cs" />
