--- a/src/TumblThree/TumblThree.Presentation/TumblThree.Presentation.csproj
+++ b/src/TumblThree/TumblThree.Presentation/TumblThree.Presentation.csproj
@@ -169,6 +169,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\DetailsViews\DetailsNewTumblBlogView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Views\DetailsViews\DetailsTumblrHiddenBlogView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -305,6 +309,9 @@
     <Compile Include="ValidationRules\TimeSpanRule.cs" />
     <Compile Include="ValidationRules\BandwidthRangeRule.cs" />
     <Compile Include="ValidationRules\IntRangeRule.cs" />
+    <Compile Include="Views\DetailsViews\DetailsNewTumblBlogView.xaml.cs">
+      <DependentUpon>DetailsNewTumblBlogView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\DetailsViews\DetailsTumblrHiddenBlogView.xaml.cs">
       <DependentUpon>DetailsTumblrHiddenBlogView.xaml</DependentUpon>
     </Compile>
