Fix: Cleanup old files no longer needed

--- a/src/TumblThree/TumblThree.Applications/TumblThree.Applications.csproj
+++ b/src/TumblThree/TumblThree.Applications/TumblThree.Applications.csproj
@@ -375,6 +375,11 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup />
+  <ItemGroup>
+    <None Include="..\TumblThreeSubProcess\bin\Release\TumblThreeSubProcess.exe">
+      <Link>Resources\TumblThreeSubProcess.exe</Link>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
