Add Display a marker in the queue view indicating a rescan
- Either using the 'Force rescan' blog option or as long as the LastId of the blog is 0, a full rescan of the blog will be performed.
- Since this can take a long time depending on the crawler and blog size, a marker ("[F]") is displayed after the blog name in the queue.

--- a/src/TumblThree/TumblThree.Presentation/TumblThree.Presentation.csproj
+++ b/src/TumblThree/TumblThree.Presentation/TumblThree.Presentation.csproj
@@ -251,6 +251,7 @@
     <Compile Include="Controls\InsertMarkerAdorner.cs" />
     <Compile Include="Controls\ListBoxDragDropHelper.cs" />
     <Compile Include="Controls\SelectableTextBlock.cs" />
+    <Compile Include="Converters\BlogQueueIndicatorConverter.cs" />
     <Compile Include="Converters\BlogQueueInfoConverter.cs" />
     <Compile Include="Converters\BlogQueueProgressConverter.cs" />
     <Compile Include="Converters\BlogTitleConverter.cs" />
