--- a/src/TumblThree/TumblThree.Applications/TumblThree.Applications.csproj
+++ b/src/TumblThree/TumblThree.Applications/TumblThree.Applications.csproj
@@ -259,6 +259,7 @@
     <Compile Include="Services\ShellServiceExtensions.cs" />
     <Compile Include="Extensions\TaskTimeoutExtension.cs" />
     <Compile Include="Services\WindowsFormsFolderBrowserDialog.cs" />
+    <Compile Include="Services\ZipStorer.cs" />
     <Compile Include="ThrottledStream.cs" />
     <Compile Include="ViewModels\DetailsViewModels\DetailsNewTumblBlogViewModel.cs" />
     <Compile Include="ViewModels\DetailsViewModels\DetailsTumblrHiddenBlogViewModel.cs" />
@@ -368,6 +369,9 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.2</Version>
+    </PackageReference>
+    <PackageReference Include="System.Text.Encoding.CodePages">
+      <Version>9.0.1</Version>
     </PackageReference>
     <PackageReference Include="System.Threading.Tasks.Dataflow">
       <Version>6.0.0</Version>
