--- a/src/TumblThree/TumblThree.Presentation/TumblThree.Presentation.csproj
+++ b/src/TumblThree/TumblThree.Presentation/TumblThree.Presentation.csproj
@@ -166,6 +166,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\DetailsViews\DetailsBlueskyBlogView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Views\DetailsViews\DetailsNewTumblBlogView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -307,6 +311,9 @@
     <Compile Include="ValidationRules\TimeSpanRule.cs" />
     <Compile Include="ValidationRules\BandwidthRangeRule.cs" />
     <Compile Include="ValidationRules\IntRangeRule.cs" />
+    <Compile Include="Views\DetailsViews\DetailsBlueskyBlogView.xaml.cs">
+      <DependentUpon>DetailsBlueskyBlogView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\DetailsViews\DetailsNewTumblBlogView.xaml.cs">
       <DependentUpon>DetailsNewTumblBlogView.xaml</DependentUpon>
     </Compile>
