Fix issue Make Collection and Progress columns sortable

--- a/src/TumblThree/TumblThree.Presentation/TumblThree.Presentation.csproj
+++ b/src/TumblThree/TumblThree.Presentation/TumblThree.Presentation.csproj
@@ -248,6 +248,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Comparers\DelegateComparer.cs" />
     <Compile Include="Controls\FocusAdvancement.cs" />
     <Compile Include="Controls\DataGridHideColumns.cs" />
     <Compile Include="Controls\Flyout.cs" />
