--- a/src/TumblThree/TumblThree.Presentation/TumblThree.Presentation.csproj
+++ b/src/TumblThree/TumblThree.Presentation/TumblThree.Presentation.csproj
@@ -249,6 +249,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Comparers\DelegateComparer.cs" />
+    <Compile Include="Comparers\StableComparer.cs" />
     <Compile Include="Controls\FocusAdvancement.cs" />
     <Compile Include="Controls\DataGridHideColumns.cs" />
     <Compile Include="Controls\Flyout.cs" />
